Fix link-jump under navbar

--- a/preprocessed-site/css/style.css
+++ b/preprocessed-site/css/style.css
@@ -80,3 +80,8 @@ ul.social-buttons li {
   color: #313537;
   font-size: smaller;
 }
+
+:target {
+  margin-top: -60px;
+  padding-top: 60px;
+}
